Home Page and Select Overflow Isuue Resolved and commented Google Auth

--- a/src/Components/HomeContent/HomeContent.css
+++ b/src/Components/HomeContent/HomeContent.css
@@ -17,11 +17,12 @@
     padding-bottom: 5px;
 }
 .searchSectionWrapper{
-   
+
     border: 2px solid white;
     border-radius: 50px;
     background-color: white;
     padding: 10px;
+    /* width: 80%; */
     margin-top: 30px;
     display: flex;
     justify-content: space-between;
@@ -42,7 +43,7 @@
     background-color: none;
   }
   .selectBox{
-    width:224px;
+    width:90%;
     height:40px;
     border:none;
     outline:none;
@@ -54,14 +55,14 @@
     color:black;
     font-style: oblique;
     width:100%;
-    height: 40px;   
+    height: 40px;
     border: none;
   }
   .searchBoxWrapper{
     padding-top: 2px;
     border: 1px solid #cccccc;
-    border-radius: 30px;  
-    padding-left:15px; 
+    border-radius: 30px;
+    padding-left:15px;
 }
 
 .searchButtonWrapper{
@@ -83,7 +84,7 @@
 .categoryWapper{
     display: none;
 }
-  
+
 /* .Gap_150{
     height: 200px;
 } */
@@ -135,7 +136,7 @@
     .homeContentBody p{
         margin-bottom: 0px !important;
     }
-    
+
     .homeContentBody h1{
        font-size: medium;
     }
